# Scythe-Agent

./: .gitignore  api_reference.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: README.md  agentic.db  alembic.ini  pyproject.toml  pyrightconfig.json  test_agentic.db
backend/alembic/: env.py
backend/alembic/versions/: 202602060001_initial_phase_0_2.py  202602060002_phase7_mcp_tables.py  202602060003_project_chat_ordering.py  202602160001_openrouter_api_key.py  202602180001_add_file_snapshots.py  202602180002_add_tool_call_output_file_path.py  202602180003_add_system_prompt_to_settings.py  202602180004_add_mcp_tool_enabled.py  202602180005_add_groq_api_key.py  202602180006_add_openai_sub_tokens.py  202602190001_add_observations.py  202602190002_add_todos.py  202602190003_add_checkpoint_id_to_todos.py  202602200001_add_active_model_provider.py  (+15 more)
backend/app/: main.py
backend/scythe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_agent_loop_guardrails.py  test_agent_loop_planning.py  test_api_contracts.py  test_context_budget_manager.py  test_contract_hardening.py  test_mcp_http_transport.py  test_mcp_integration.py  test_observational_memory.py  test_openai_sub_client.py  test_openrouter_integration.py  test_path_utils.py  test_phase7_mcp_integration.py  test_phase8_contract_hardening.py  test_plan_endpoints.py  test_project_chat_crud.py  test_project_overview.py  test_reasoning_capabilities.py  test_repositories_smoke.py  test_service_behaviors.py  test_sub_agent_runner.py  test_tool_executor.py
(+243 files in other folders)
