[project]
name = "scythe-backend"
version = "0.1.0"
description = "Phase 0-2 FastAPI backend MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "ripgrep-python>=0.1.0",
  "tree-sitter>=0.25.0",
  "tree-sitter-language-pack>=0.13.0",
  "tiktoken>=0.7.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
  "ruff>=0.8.0",
  "ty>=0.0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
